@@ -673,7 +673,7 @@ public class SpawnerConfiguration {
             return new MobData();
         }
 
-        public boolean isResoled() {
+        public boolean isResolved() {
             return true;
         }
 
@@ -746,7 +746,7 @@ public class SpawnerConfiguration {
         }
 
         @Override
-        public boolean isResoled() {
+        public boolean isResolved() {
             return false;
         }
 
@@ -781,7 +781,10 @@ public class SpawnerConfiguration {
 
     public static MobData getMobData(String id) {
         MobData mobData = SpawnerConfiguration.mobData.get(id);
-        if (!mobData.isResoled()) {
+        if (mobData == null) {
+            return null;
+        }
+        if (!mobData.isResolved()) {
             mobData = mobData.resolve();
             SpawnerConfiguration.mobData.put(id, mobData);
         }
